<resources>
    <string name="app_name">IndividualApp</string>
    <string name="title_home">Home</string>
    <string name="title_findtrack">Find New Movie</string>
    <string name="title_saved">Saved</string>
    <string name="delete_all_recommendations">Delete All</string>
    <string name="sort_list">Sort List</string>
    <string name="acoustic">Acousticness</string>
    <string name="dance">Danceability</string>
    <string name="energy">Energy</string>
    <string name="instrumental">Instrumentalness</string>
    <string name="live">Liveness</string>
    <string name="speech">Speechiness</string>
    <string name="valence">Valence</string>
    <string name="search">Search</string>
    <string name="unknown_track">Unknown Track</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_album">Unknown Album</string>
    <string name="album_art">Album Art</string>
    <string name="movie">Track:</string>
    <string name="artist">Artist:</string>
    <string name="album">Album:</string>
    <string name="current_recommendation">Current Recommendation:</string>
    <string name="new_music_finder">New Music Finder</string>
    <string name="last_recommendation">Last Recommendation</string>
    <string name="shuffle">Shuffle</string>
    <string name="something_new">Something New</string>
    <string name="last_saved_recommendation">Last Saved Recommendation</string>
    <string name="save">Save</string>
    <string name="your_saved_recommendations">Your Saved Recommendations</string>
    <string name="delete">Delete</string>
    <string name="title">Title:</string>
    <string name="unknown_title">Unknown Title</string>
    <string name="director">Director:</string>
    <string name="unknown_director">Unknown Director</string>
    <string name="year">Year:</string>
    <string name="unknown_year">Unknown Year</string>
    <string name="rated">Rated:</string>
    <string name="unknown_rating">Unknown Rating</string>
    <string name="run_time">Run Time:</string>
    <string name="unknown_run_time">Unknown Run Time</string>
    <string name="imdb_rating">IMDb Rating:</string>
    <string name="unknown_imdb_rating">Unknown IMDb Rating</string>
    <string name="poster_link">Poster Link</string>
    <string name="unknown_poster_link">Unknown Poster Link</string>
    <string name="movie_title">Movie Title</string>
    <string name="last_search_result">Last Search Result:</string>
    <string name="watchlist">Watchlist Home</string>
    <string name="last_saved_search">Last Saved Search</string>
    <string name="oldest_saved_search">Oldest Saved Search</string>
    <string name="your_watchlist">Your Watchlist</string>
    <string name="year_optional">Year (Optional)</string>
    <string name="find_a_movie">Find a Movie</string>
    <string name="movie_saved">Movie saved to watch list!</string>
</resources>