<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.individualapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_findtrack"
        android:name="com.example.individualapp.ui.findTrack.FindMovieFragment"
        android:label="@string/title_findtrack"
        tools:layout="@layout/fragment_findmovie" />

    <fragment
        android:id="@+id/navigation_saved"
        android:name="com.example.individualapp.ui.saved.SavedFragment"
        android:label="@string/title_saved"
        tools:layout="@layout/fragment_saved" />
</navigation>